ARM: dts: msm: vote noc freq for both active and sleep state for msm8940
Apps maintains two states for clocks; active state, which is effective only
if Apps is out of power collapse, sleep state, which is effective during
Apps power collapse. Currently USB votes for pcnoc/snoc/bimc frequency are
considered for only active state. Because of this reason, during Apps power
collapse USB votes are overridden with sleep state settings, where pcnoc/
snoc/bimc frequencies are lower.

This is impacting the BAM based USB transfers performance, where Apps can
enter into power collapse, as there is no much Apps intervention for BAM
based transfers. Hence, adding USB pcnoc/snoc/bimc frequencies vote for
both active state and sleep state for msm8940 which uses BAM2BAM over IPA
for supporting RMNET and RNDIS.

Change-Id: I6176a0e89a2819553c752e6d3e91ebadfccb7e41
Signed-off-by: Vijayavardhan Vennapusa <vvreddy@codeaurora.org>

--- a/arch/arm/boot/dts/qcom/msm8940.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8940.dtsi
@@ -24,6 +24,19 @@
 };
 
 &usb_otg {
+
+	/delete-property/ clocks;
+	clocks = <&clock_gcc clk_gcc_usb_hs_ahb_clk>,
+			 <&clock_gcc clk_gcc_usb_hs_system_clk>,
+			 <&clock_gcc clk_gcc_usb2a_phy_sleep_clk>,
+			 <&clock_gcc clk_bimc_usb_clk>,
+			 <&clock_gcc clk_snoc_usb_clk>,
+			 <&clock_gcc clk_pnoc_usb_clk>,
+			 <&clock_gcc clk_gcc_qusb2_phy_clk>,
+			 <&clock_gcc clk_gcc_usb2_hs_phy_only_clk>,
+			 <&clock_gcc clk_gcc_usb_hs_phy_cfg_ahb_clk>,
+			 <&clock_gcc clk_xo_otg_clk>;
+
 	qcom,usbbam@78c4000 {
 		qcom,enable-hsusb-bam-on-boot;
 
